add: validate
