# challenge/controllers/userControllers.js
@@ -7,6 +7,26 @@ const { PrismaClient, Prisma } = require("@prisma/client"),
 module.exports = {
   registerUser: async (req, res) => {
     try {
+      const existEmail = await prisma.users.findFirst({
+        where:{
+          email : req.body.email
+        }
+      })
+      if(existEmail){
+        return res.status(409).json({
+          message : "email alredy exist"
+        })
+      }
+      const existIdentity = await prisma.profile.findFirst({
+        where:{
+          identity_number : req.body.identity_number
+        }
+      })
+      if(existIdentity){
+        return res.status(409).json({
+          message : "identity alredy exist"
+        })
+      }
       const user = await prisma.users.create({
         data: {
           name: req.body.name,
@@ -27,9 +47,8 @@ module.exports = {
       });
     } catch (error) {
       console.error(error);
-      res.status(400).json({
-        error: error.name,
-        message: error.message,
+      res.status(500).json({
+        error: "internal Server Error"
       });
     }
   },
@@ -78,19 +97,33 @@ module.exports = {
     }
   },
 
-  updateUser: async (req, res) => {
-    const userId = parseInt(req.params.userId, 10);
-    const { name, email, password } = req.body;
+  changePasswordUser: async (req, res) => {
+    const { old_password, new_password } = req.body;
+    const Id = res.user.id;
 
     try {
-      const updatedUser = await prisma.users.update({
-        where: { id: userId },
-        data: { name, email, password },
+      const User = await prisma.users.findFirst({
+        where: {
+          id: Id
+        }
       });
 
-      return res.json({
-        data: updatedUser,
-      });
+      if(bcrypt.compareSync(old_password, User.password)){
+        const password = await utils.cryptPassword(new_password) 
+        const updatedUser = await prisma.users.update({
+          where: { id: Id },
+          data: { password },
+        });
+  
+        return res.status(200).json({
+          data: updatedUser,
+        });
+      }else{
+        return res.status(409).json({
+          error: "invalid password",
+        });
+      }
+      
     } catch (error) {
       console.error("Error updating user:", error);
       return res.status(500).json({
@@ -99,91 +132,99 @@ module.exports = {
     }
   },
 
-  deleteUser: async (req, res) => {
-    const userId = parseInt(req.params.userId, 10);
-
+  deleteMyUser: async (req, res) => {
+    // const userId = parseInt(req.params.userId, 10);
+    const userId = res.user.id
     try {
-      const user = await prisma.users.findUnique({
+      const user = await prisma.users.findFirst({
         where: {
-          id: userId,
-        },
+          id: userId
+        }
       });
       if (!user) {
         return res.status(404).json({
           message: "user id not found",
         });
       }
-      const account = await prisma.bank_accounts.findMany({
-        where: {
-          user_id: userId,
-        },
-      });
-
-      // delete Transaction
-      if (account) {
-        const getAccountId = account.map((account) => {
-          return {
-            id: account.id,
-          };
+      
+      if(bcrypt.compareSync(req.body.password, user.password)){
+        const account = await prisma.bank_accounts.findMany({
+          where: {
+            user_id: userId,
+          },
         });
-        //convert object to int
-        const IntGetAccountId = getAccountId.map((obj) => obj.id);
-        const getTransactions = await prisma.bank_account_transactions.findMany(
-          {
-            where: {
-              OR: [
-                {
-                  source_account_id: {
-                    in: IntGetAccountId,
-                  },
-                },
-                {
-                  destination_account_id: {
-                    in: IntGetAccountId,
-                  },
-                },
-              ],
-            },
-          }
-        );
-        if (getTransactions) {
-          const getTransactionsId = getTransactions.map((getTransactions) => {
+  
+        // delete Transaction
+        if (account) {
+          const getAccountId = account.map((account) => {
             return {
-              id: getTransactions.id,
+              id: account.id,
             };
           });
-
           //convert object to int
-          const IntGetTransactinId = getTransactionsId.map((obj) => obj.id);
-          await prisma.bank_account_transactions.deleteMany({
-            where: {
-              id: {
-                in: IntGetTransactinId,
+          const IntGetAccountId = getAccountId.map((obj) => obj.id);
+          const getTransactions = await prisma.bank_account_transactions.findMany(
+            {
+              where: {
+                OR: [
+                  {
+                    source_account_id: {
+                      in: IntGetAccountId,
+                    },
+                  },
+                  {
+                    destination_account_id: {
+                      in: IntGetAccountId,
+                    },
+                  },
+                ],
               },
-            },
+            }
+          );
+          if (getTransactions) {
+            const getTransactionsId = getTransactions.map((getTransactions) => {
+              return {
+                id: getTransactions.id,
+              };
+            });
+  
+            //convert object to int
+            const IntGetTransactinId = getTransactionsId.map((obj) => obj.id);
+            await prisma.bank_account_transactions.deleteMany({
+              where: {
+                id: {
+                  in: IntGetTransactinId,
+                },
+              },
+            });
+          }
+          // delete Bank Account
+          await prisma.bank_accounts.deleteMany({
+            where: { user_id: userId },
           });
         }
-        // delete Bank Account
-        await prisma.bank_accounts.deleteMany({
+        //delete profile
+        await prisma.profile.delete({
           where: { user_id: userId },
         });
+        //delete users
+        await prisma.users.delete({
+          where: { id: userId },
+        });
+  
+        return res.status(200).json({
+          message: "User deleted successfully",
+        });
+      }else{
+        return res.status(409).json({
+          message: "Invalid Password",
+        });
       }
-      //delete profile
-      await prisma.profile.delete({
-        where: { user_id: userId },
-      });
-      //delete users
-      await prisma.users.delete({
-        where: { id: userId },
-      });
-
-      return res.status(200).json({
-        message: "User deleted successfully",
-      });
+      
     } catch (error) {
       console.error("Error deleting user:", error);
       return res.status(500).json({
-        error: "Internal Server Error",
+        data : req.body.password,
       });
     }
   },
